--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@frostui/tailwindcss": "^0.1.5",
     "@iconify/react": "^5.2.1",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "gumshoejs": "^5.1.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.542.0",
     "next": "15.0.3",
     "npx": "^10.2.2",
