--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "sass": "^1.80.7",
